// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`subscriptionUtils getCostCalculatorBodyByModule cf 1`] = `
<div>
  <div
    class="Layout--vertical Layout--layout-spacing-large StyledProps--main StyledProps--margin-bottom-large"
  >
    <div
      class="bp3-card bp3-elevation-0 Card--card"
    >
      <div
        class="Layout--vertical StyledProps--main"
      >
        <div
          class="Layout--vertical StyledProps--main StyledProps--padding-bottom-medium"
        >
          <p
            class="StyledProps--font StyledProps--main StyledProps--font-variation-h5"
          >
            authSettings.costCalculator.developer.title
          </p>
          <div
            class="Layout--horizontal Layout--layout-spacing-small StyledProps--main"
          >
            <p
              class="StyledProps--font StyledProps--main StyledProps--color StyledProps--color-primary7 StyledProps--font-size-xsmall"
            >
              authSettings.costCalculator.developer.developer
            </p>
            <p
              class="StyledProps--font StyledProps--main StyledProps--font-size-xsmall"
            >
              authSettings.unitPrice: $0.00 common.perDeveloper common.perMonth
            </p>
          </div>
        </div>
        <div
          class="Layout--horizontal StyledProps--main subscriptionInfo StyledProps--flex StyledProps--flex-justifyContent-space-between"
        >
          <div
            class="Layout--vertical Layout--layout-spacing-medium StyledProps--main"
          >
            <p
              class="StyledProps--font StyledProps--main"
            >
              authSettings.costCalculator.currentSubscribed
            </p>
            <div
              class="Layout--horizontal Layout--layout-spacing-small StyledProps--main StyledProps--flex StyledProps--flex-alignItems-baseline StyledProps--flex-justifyContent-start"
            >
              <p
                class="StyledProps--font StyledProps--main StyledProps--font-weight-bold"
              >
                20
              </p>
              <p
                class="StyledProps--font StyledProps--main StyledProps--color StyledProps--color-primary7 StyledProps--font-size-xsmall StyledProps--font-weight-bold"
              >
                Free common.subscriptions.overview.plan
              </p>
            </div>
          </div>
          <div
            class="Layout--vertical Layout--layout-spacing-medium StyledProps--main"
          >
            <p
              class="StyledProps--font StyledProps--main"
            >
              authSettings.costCalculator.using
            </p>
            <p
              class="StyledProps--font StyledProps--main StyledProps--font-weight-bold"
            >
              1
            </p>
          </div>
          <div
            class="Layout--vertical Layout--layout-spacing-medium StyledProps--main"
          >
            <p
              class="StyledProps--font StyledProps--main"
            >
              authSettings.recomendation
            </p>
            <p
              class="StyledProps--font StyledProps--main StyledProps--color StyledProps--color-primary7 StyledProps--font-weight-bold"
            >
              20
            </p>
          </div>
        </div>
        <div
          class="Layout--horizontal Layout--layout-spacing-large StyledProps--main"
        >
          <div
            class="bp3-slider slider"
          >
            <div
              class="bp3-slider-track"
            >
              <div
                class="bp3-slider-progress"
                style="left: 0.00%; right: 100.00%; top: 0px;"
              />
              <div
                class="bp3-slider-progress bp3-intent-primary"
                style="left: 0.00%; right: 50.00%; top: 0px;"
              />
              <div
                class="bp3-slider-progress"
                style="left: 50.00%; right: 0.00%; top: 0px;"
              />
            </div>
            <div
              class="bp3-slider-axis"
            >
              <div
                class="bp3-slider-label"
                style="left: 0.00%;"
              >
                0
              </div>
              <div
                class="bp3-slider-label"
                style="left: 20.00%;"
              >
                10
              </div>
              <div
                class="bp3-slider-label"
                style="left: 40.00%;"
              >
                20
              </div>
              <div
                class="bp3-slider-label"
                style="left: 60.00%;"
              >
                30
              </div>
              <div
                class="bp3-slider-label"
                style="left: 80.00%;"
              >
                40
              </div>
              <div
                class="bp3-slider-label"
                style="left: 100.00%;"
              >
                50
              </div>
            </div>
            <span
              class="bp3-slider-handle"
              style="left: calc(50.00% - 0px);"
              tabindex="0"
            >
              <span
                class="bp3-slider-label"
              >
                25
              </span>
            </span>
          </div>
          <div
            class="TextInput--main"
          >
            <div
              class="bp3-input-group textInput"
            >
              <input
                class="bp3-input"
                data-testid="slider-input"
                type="text"
                value="25"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="bp3-card bp3-elevation-0 Card--card"
    >
      <div
        class="Layout--vertical StyledProps--main"
      >
        <div
          class="Layout--vertical StyledProps--main StyledProps--padding-bottom-medium"
        >
          <p
            class="StyledProps--font StyledProps--main StyledProps--font-variation-h5"
          >
            authSettings.costCalculator.mau.title
          </p>
        </div>
        <div
          class="Layout--horizontal StyledProps--main subscriptionInfo StyledProps--flex StyledProps--flex-justifyContent-space-between"
        >
          <div
            class="Layout--vertical Layout--layout-spacing-medium StyledProps--main"
          >
            <p
              class="StyledProps--font StyledProps--main"
            >
              authSettings.costCalculator.currentSubscribed
            </p>
            <div
              class="Layout--horizontal Layout--layout-spacing-small StyledProps--main StyledProps--flex StyledProps--flex-alignItems-baseline StyledProps--flex-justifyContent-start"
            >
              <p
                class="StyledProps--font StyledProps--main StyledProps--font-weight-bold"
              >
                100
                k
              </p>
              <p
                class="StyledProps--font StyledProps--main StyledProps--color StyledProps--color-primary7 StyledProps--font-size-xsmall StyledProps--font-weight-bold"
              >
                Free common.subscriptions.overview.plan
              </p>
            </div>
          </div>
          <div
            class="Layout--vertical Layout--layout-spacing-medium StyledProps--main"
          >
            <p
              class="StyledProps--font StyledProps--main"
            >
              authSettings.costCalculator.using
            </p>
            <p
              class="StyledProps--font StyledProps--main StyledProps--font-weight-bold"
            >
              1
              k
            </p>
          </div>
          <div
            class="Layout--vertical Layout--layout-spacing-medium StyledProps--main"
          >
            <p
              class="StyledProps--font StyledProps--main"
            >
              authSettings.recomendation
            </p>
            <p
              class="StyledProps--font StyledProps--main StyledProps--color StyledProps--color-primary7 StyledProps--font-weight-bold"
            >
              100
              k
            </p>
          </div>
        </div>
        <div
          class="Layout--horizontal Layout--layout-spacing-large StyledProps--main"
        >
          <div
            class="bp3-slider slider"
          >
            <div
              class="bp3-slider-track"
            >
              <div
                class="bp3-slider-progress"
                style="left: 0.00%; right: 100.00%; top: 0px;"
              />
              <div
                class="bp3-slider-progress bp3-intent-primary"
                style="left: 0.00%; right: 97.60%; top: 0px;"
              />
              <div
                class="bp3-slider-progress"
                style="left: 2.40%; right: 0.00%; top: 0px;"
              />
            </div>
            <div
              class="bp3-slider-axis"
            >
              <div
                class="bp3-slider-label"
                style="left: 0.00%;"
              >
                0
              </div>
              <div
                class="bp3-slider-label"
                style="left: 20.00%;"
              >
                100
              </div>
              <div
                class="bp3-slider-label"
                style="left: 40.00%;"
              >
                200
              </div>
              <div
                class="bp3-slider-label"
                style="left: 60.00%;"
              >
                300
              </div>
              <div
                class="bp3-slider-label"
                style="left: 80.00%;"
              >
                400
              </div>
              <div
                class="bp3-slider-label"
                style="left: 100.00%;"
              >
                500
              </div>
            </div>
            <span
              class="bp3-slider-handle"
              style="left: calc(2.40% - 0px);"
              tabindex="0"
            >
              <span
                class="bp3-slider-label"
              >
                12
              </span>
            </span>
          </div>
          <div
            class="bp3-popover-wrapper DropDown--main dropdown"
          >
            <div
              class="bp3-popover-target"
            >
              <div
                class=""
              >
                <div
                  class="Layout--horizontal StyledProps--main DropDown--dropdownButton DropDown--withBorder StyledProps--flex"
                  data-testid="slider-dropdown"
                  style="width: 70px;"
                >
                  <div
                    class="Layout--horizontal StyledProps--main DropDown--labelWrapper StyledProps--flex"
                  >
                    <p
                      class="StyledProps--font Text--lineclamp StyledProps--main DropDown--label"
                      data-testid="dropdown-value"
                      style="--text-line-clamp: 1;"
                    >
                        
                    </p>
                  </div>
                  <div
                    class="Layout--horizontal StyledProps--main DropDown--btnWrapper StyledProps--flex"
                  >
                    <span
                      class="bp3-icon StyledProps--main StyledProps--color StyledProps--color-grey400"
                      data-icon="main-chevron-down"
                    >
                      <svg
                        height="8"
                        viewBox="0 0 14 8"
                        width="8"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M13 0c-.3 0-.5.1-.7.3L7 5.6 1.7.3C1.5.1 1.3 0 1 0 .4 0 0 .4 0 1c0 .3.1.5.3.7l6 6c.2.2.4.3.7.3s.5-.1.7-.3l6-6c.2-.2.3-.4.3-.7 0-.6-.4-1-1-1z"
                          fill="#4d5969"
                        />
                      </svg>
                    </span>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`subscriptionUtils getCostCalculatorBodyByModule cf monthly 1`] = `
<div>
  <div
    class="Layout--vertical Layout--layout-spacing-large StyledProps--main StyledProps--margin-bottom-large"
  >
    <div
      class="bp3-card bp3-elevation-0 Card--card"
    >
      <div
        class="Layout--vertical StyledProps--main"
      >
        <div
          class="Layout--vertical StyledProps--main StyledProps--padding-bottom-medium"
        >
          <p
            class="StyledProps--font StyledProps--main StyledProps--font-variation-h5"
          >
            authSettings.costCalculator.developer.title
          </p>
          <div
            class="Layout--horizontal Layout--layout-spacing-small StyledProps--main"
          >
            <p
              class="StyledProps--font StyledProps--main StyledProps--color StyledProps--color-primary7 StyledProps--font-size-xsmall"
            >
              authSettings.costCalculator.developer.developer
            </p>
            <p
              class="StyledProps--font StyledProps--main StyledProps--font-size-xsmall"
            >
              authSettings.unitPrice: $0.00 common.perDeveloper common.perMonth
            </p>
          </div>
        </div>
        <div
          class="Layout--horizontal StyledProps--main subscriptionInfo StyledProps--flex StyledProps--flex-justifyContent-space-between"
        >
          <div
            class="Layout--vertical Layout--layout-spacing-medium StyledProps--main"
          >
            <p
              class="StyledProps--font StyledProps--main"
            >
              authSettings.costCalculator.currentSubscribed
            </p>
            <div
              class="Layout--horizontal Layout--layout-spacing-small StyledProps--main StyledProps--flex StyledProps--flex-alignItems-baseline StyledProps--flex-justifyContent-start"
            >
              <p
                class="StyledProps--font StyledProps--main StyledProps--font-weight-bold"
              >
                0
              </p>
              <p
                class="StyledProps--font StyledProps--main StyledProps--color StyledProps--color-primary7 StyledProps--font-size-xsmall StyledProps--font-weight-bold"
              >
                Free common.subscriptions.overview.plan
              </p>
            </div>
          </div>
          <div
            class="Layout--vertical Layout--layout-spacing-medium StyledProps--main"
          >
            <p
              class="StyledProps--font StyledProps--main"
            >
              authSettings.costCalculator.using
            </p>
            <p
              class="StyledProps--font StyledProps--main StyledProps--font-weight-bold"
            >
              0
            </p>
          </div>
          <div
            class="Layout--vertical Layout--layout-spacing-medium StyledProps--main"
          >
            <p
              class="StyledProps--font StyledProps--main"
            >
              authSettings.recomendation
            </p>
            <p
              class="StyledProps--font StyledProps--main StyledProps--color StyledProps--color-primary7 StyledProps--font-weight-bold"
            >
              0
            </p>
          </div>
        </div>
        <div
          class="Layout--horizontal Layout--layout-spacing-large StyledProps--main"
        >
          <div
            class="bp3-slider slider"
          >
            <div
              class="bp3-slider-track"
            >
              <div
                class="bp3-slider-progress bp3-intent-primary"
                style="left: 0.00%; right: 100.00%; top: 0px;"
              />
              <div
                class="bp3-slider-progress"
                style="left: 0.00%; right: 100.00%; top: 0px;"
              />
              <div
                class="bp3-slider-progress"
                style="left: 0.00%; right: 0.00%; top: 0px;"
              />
            </div>
            <div
              class="bp3-slider-axis"
            >
              <div
                class="bp3-slider-label"
                style="left: 0.00%;"
              >
                0
              </div>
              <div
                class="bp3-slider-label"
                style="left: 20.00%;"
              >
                10
              </div>
              <div
                class="bp3-slider-label"
                style="left: 40.00%;"
              >
                20
              </div>
              <div
                class="bp3-slider-label"
                style="left: 60.00%;"
              >
                30
              </div>
              <div
                class="bp3-slider-label"
                style="left: 80.00%;"
              >
                40
              </div>
              <div
                class="bp3-slider-label"
                style="left: 100.00%;"
              >
                50
              </div>
            </div>
            <span
              class="bp3-slider-handle"
              style="left: calc(0.00% - 0px);"
              tabindex="0"
            >
              <span
                class="bp3-slider-label"
              >
                0
              </span>
            </span>
          </div>
          <div
            class="TextInput--main"
          >
            <div
              class="bp3-input-group textInput"
            >
              <input
                class="bp3-input"
                data-testid="slider-input"
                type="text"
                value="0"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="bp3-card bp3-elevation-0 Card--card"
    >
      <div
        class="Layout--vertical StyledProps--main"
      >
        <div
          class="Layout--vertical StyledProps--main StyledProps--padding-bottom-medium"
        >
          <p
            class="StyledProps--font StyledProps--main StyledProps--font-variation-h5"
          >
            authSettings.costCalculator.mau.title
          </p>
        </div>
        <div
          class="Layout--horizontal StyledProps--main subscriptionInfo StyledProps--flex StyledProps--flex-justifyContent-space-between"
        >
          <div
            class="Layout--vertical Layout--layout-spacing-medium StyledProps--main"
          >
            <p
              class="StyledProps--font StyledProps--main"
            >
              authSettings.costCalculator.currentSubscribed
            </p>
            <div
              class="Layout--horizontal Layout--layout-spacing-small StyledProps--main StyledProps--flex StyledProps--flex-alignItems-baseline StyledProps--flex-justifyContent-start"
            >
              <p
                class="StyledProps--font StyledProps--main StyledProps--font-weight-bold"
              >
                0
                k
              </p>
              <p
                class="StyledProps--font StyledProps--main StyledProps--color StyledProps--color-primary7 StyledProps--font-size-xsmall StyledProps--font-weight-bold"
              >
                Free common.subscriptions.overview.plan
              </p>
            </div>
          </div>
          <div
            class="Layout--vertical Layout--layout-spacing-medium StyledProps--main"
          >
            <p
              class="StyledProps--font StyledProps--main"
            >
              authSettings.costCalculator.using
            </p>
            <p
              class="StyledProps--font StyledProps--main StyledProps--font-weight-bold"
            >
              0
              k
            </p>
          </div>
          <div
            class="Layout--vertical Layout--layout-spacing-medium StyledProps--main"
          >
            <p
              class="StyledProps--font StyledProps--main"
            >
              authSettings.recomendation
            </p>
            <p
              class="StyledProps--font StyledProps--main StyledProps--color StyledProps--color-primary7 StyledProps--font-weight-bold"
            >
              0
              k
            </p>
          </div>
        </div>
        <div
          class="Layout--horizontal Layout--layout-spacing-large StyledProps--main"
        >
          <div
            class="bp3-slider slider"
          >
            <div
              class="bp3-slider-track"
            >
              <div
                class="bp3-slider-progress"
                style="left: 0.00%; top: 0px;"
              />
              <div
                class="bp3-slider-progress"
                style="right: 100.00%; top: 0px;"
              />
              <div
                class="bp3-slider-progress"
                style="left: 0.00%; right: 0.00%; top: 0px;"
              />
            </div>
            <div
              class="bp3-slider-axis"
            >
              <div
                class="bp3-slider-label"
                style="left: 0.00%;"
              >
                0
              </div>
              <div
                class="bp3-slider-label"
                style="left: 20.00%;"
              >
                100
              </div>
              <div
                class="bp3-slider-label"
                style="left: 40.00%;"
              >
                200
              </div>
              <div
                class="bp3-slider-label"
                style="left: 60.00%;"
              >
                300
              </div>
              <div
                class="bp3-slider-label"
                style="left: 80.00%;"
              >
                400
              </div>
              <div
                class="bp3-slider-label"
                style="left: 100.00%;"
              >
                500
              </div>
            </div>
            <span
              class="bp3-slider-handle"
              style="left: calc(NaN% - 0px);"
              tabindex="0"
            >
              <span
                class="bp3-slider-label"
              >
                NaN
              </span>
            </span>
          </div>
          <div
            class="bp3-popover-wrapper DropDown--main dropdown"
          >
            <div
              class="bp3-popover-target"
            >
              <div
                class=""
              >
                <div
                  class="Layout--horizontal StyledProps--main DropDown--dropdownButton DropDown--withBorder StyledProps--flex"
                  data-testid="slider-dropdown"
                  style="width: 70px;"
                >
                  <div
                    class="Layout--horizontal StyledProps--main DropDown--labelWrapper StyledProps--flex"
                  >
                    <p
                      class="StyledProps--font Text--lineclamp StyledProps--main DropDown--label"
                      data-testid="dropdown-value"
                      style="--text-line-clamp: 1;"
                    >
                        
                    </p>
                  </div>
                  <div
                    class="Layout--horizontal StyledProps--main DropDown--btnWrapper StyledProps--flex"
                  >
                    <span
                      class="bp3-icon StyledProps--main StyledProps--color StyledProps--color-grey400"
                      data-icon="main-chevron-down"
                    >
                      <svg
                        height="8"
                        viewBox="0 0 14 8"
                        width="8"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M13 0c-.3 0-.5.1-.7.3L7 5.6 1.7.3C1.5.1 1.3 0 1 0 .4 0 0 .4 0 1c0 .3.1.5.3.7l6 6c.2.2.4.3.7.3s.5-.1.7-.3l6-6c.2-.2.3-.4.3-.7 0-.6-.4-1-1-1z"
                          fill="#4d5969"
                        />
                      </svg>
                    </span>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`subscriptionUtils getCostCalculatorBodyByModule default 1`] = `<div />`;
